app/component/summary-row.scss
.canceled-legs-banner {
  width: 100%;
  background: $cancelation-red;
  color: #fff;
  padding: 1em;
  .canceled-legs-container {
    display: flex;
    svg {
      fill: $white;
      color: $cancelation-red;
      font-size: 1.5em;
    }
    .canceled-legs-right-content {
      margin-left: 1em;
      .canceled-legs-text {
        margin-bottom: 0.5em;
      }
      button {
        background: $cancelation-red;
        color: $white;
        border: 1px solid $white;
        border-radius: 4px;
        padding: 0.5em;
        font-size: $font-size-xxsmall;
        margin-bottom: 0;
      }
    }
  }
}

.itinerary-summary-row {
  min-height: 50px;
  padding-left: 0.9375em;
  padding-right: 0.9375em;
  overflow: hidden;
  background-color: $white;
  display: flex;
  user-select: none;
  $distance-gray: #7b7b7b;
  font-size: $font-size-normal;
  white-space: nowrap;
  position: relative;

  &.cancelled-itinerary {
    .itinerary-first-leg-start-time {
      text-decoration: line-through;
      color: $cancelation-red;
    }
  }
  &.passive {
    .summary-clickable-area {
      border-bottom: 1px solid $light-gray;
    }
  }

  h3, h4 {
    @include font-medium;
    flex-grow: 1;
    margin: 0.5em;
    line-height: 1.5;
  }

  .itinerary-duration-and-distance {
    width: 100%;
    margin-top: $padding-small;
    margin-left: $padding-medium;
  }

  .itinerary-duration-container {
    width: 100%;
    overflow: hidden;
    text-align: right;
    min-width: 2em;
    font-size: 18px;
    font-stretch: normal;
    letter-spacing: -0.5px;
    line-height: normal;
    font-style: normal;
    padding-top: 17px;

    .itinerary-start-time-and-end-time {
      float: left;
    }
    .itinerary-duration {
      float: right;
    }
    .itinerary-start-date {
      text-align: right;
      float: left;
      margin-top: -1px;
      margin-bottom: -2px;
      line-height: 1;
      @include font-narrow-medium;
      font-size: $font-size-xxxsmall;
      & > span {
        line-height: 1;
        text-transform: capitalize;
        border-bottom-left-radius: 2px;
        border-bottom-right-radius: 2px;
        color: $white;
        background-color: $gray;
        display: inline-block;
      }
      &.nobg {
        height: 0.8em;
        & > span {
          background-color: transparent;
        }
      }
    }
  }

  .itinerary-end-time-and-distance {
    width: 100%;
  }

  .itinerary-first-leg-start-time-container {
    top: 3.77em;
    left: 2.3em;
    @include font-book;
    padding-top: 8px;
    width: 100%;
    max-width: 100%;
    color: $distance-gray;

    .itinerary-first-leg-start-time {
      font-size: 13px;
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: normal;
      .first-leg-start-time-green {
        color: $realtime-color;
        font-weight: 500;
      }
  }
    &.small {
      font-size: $font-size-small;
      left: 1.2em;
      top: 2.6em;
    }
  }
  .legs-container {
    width: 100%;
  }

  .itinerary-legs {
    display: flex;
    white-space: nowrap;
    width: calc(100% + 2px);
    .leg {
      min-width: 24px;
      width: calc(var(--width) - (var(--minus)) - 2px + var(--plus));
      margin: 0 2px 0 0;
      justify-content: center;
      &.fit-route-number {
        min-width: fit-content;
        .vcenter-children {
          min-width: max-content !important; // forces the leg to fit the route number in it
        }
      }
      &.bike_park {
        overflow: hidden;
        justify-content: center;
        min-width: 24px;
        width: 24px;
        position: relative;
        height: 24px;
        border: 1px solid #ddd;
        border-radius: 3px;
        background-color: #f9af1f;

        .itinerary-icon {
          margin-left: -2px;
          margin-top: 0px;
          fill: #000;
          font-size: 20px;
        }
        .icon-container {
          margin-left: 2px;
          .icon {
            width: 100%;
            height: 100%;
          }
        }
      }
      &.walk, &.wait {
        min-width: 1px;
      }
      &.via {
        min-width: 24px;
        max-width: 24px;
        height: 24px;
        border: 1px solid #ddd;
        border-radius: 3px;
        .itinerary-icon {
          margin-left: 1px;
          margin-top: 3px;
          fill: #000;
        }
        .icon-container {
          margin-left: 2px;
          .icon {
            width: 16px;
            height: 16px;
          }
        }
      }
      &.large {
        padding-top: 0;
      }
      .route-number {
        display: flex;
        min-width: 0;
        height: 24px;
        max-width: fit-content;
        /* stylelint-disable-next-line */
        max-width: -moz-fit-content;
        .vcenter-children {
          .empty {
            float: left;
            height: 100%;
            min-width: 1px;
          }
          display: block;
          align-items: center;
          line-height: 1;
          overflow: hidden;
          min-width: unset;
          justify-content: space-between;
          .special-icon {
            float: left;
          }
          .vehicle-number-container-v {
            float: left;
            display: flex;
            height: 100%;
            margin-left: 7px;
            .vehicle-number {
              align-self: center;
            }
          }
          &.wait {
            .icon {
              margin-left: 1px;
            }
          }
          &.walk, &.citybike, &.bicycle, &.wait {
            display: block;
            overflow: hidden;
            min-width: unset;
            .icon {
              width: 18px;
              &.walk, &.citybike, &.bicycle, &.wait {
                float: left;
                display: flex;
                justify-content: center;
                max-width: 100%;
              }
            }
            .leg-duration-container {
              float: left;
              display: flex;
              height: 110%;
              padding-left: 5px;
              &.wait {
                height: 100%;
              }
              .leg-duration {
                align-self: center;
              }
            }
          }
        }
        .itinerary-icon_with-bicycle {
          color: white;
          height: 20px;
          width: 20px;
          padding-bottom: 4px;
        }
        .special-icon {
          height: 24px;
        }
          .vehicle-number-container-v {
            padding-right: 1px;
            .long {
              left: 24px;
              top: 4px;
              text-align: left;
            }
            .vehicle-number {
              @include font-narrow-medium;
              color: $white;
              font-size: 15px;
              padding: 1px 0 0 0;
            }
          }
          .leg-duration-container {
            .leg-duration {
              font-size: 13px;
              color: $black;
            }
            &.citybike {
              .leg-duration{
                padding-left: 5px;
              }
            }
            &.bicycle {
              .leg-duration{
                padding-bottom: 2px;
                padding-left: 5px;
              }
            }
          }
      }
    }
    .vcenter-children {
      display: flex;
      align-items: center;
      justify-content: left;
      line-height: 1;
      max-width: 100%;
      .vehicle-number-container-v {
        max-width: 100%;
        overflow: hidden;
      }
    }

    div.bar-container {
      width:100%;
      top: 0;
      left: 0;
      right: 0;
      display: flex;
      align-items: center;
    }

    div.bar {
      width: 100%;
      background-color: currentColor;
      height: 24px;
      border-radius: $border-radius;
      &.call {
        border-color: #aaa;
      }
      &.wait {
        background-color: white;
        border: 1px solid $light-gray;
      }
      &.walk {
        background-color: $light-gray;
      }
      &.bicycle {
        color: #f4f4f5; // Override default bike color
        border: solid 1px rgba(0, 0, 0, 0.3);
      }
    }
    .line {
      text-align: center;

      .icon {
        font-size: 24px;
      }
    }

    .special-icon, .icon{
      &.wait {
        color: #666;
        .icon {
          height: 0.75em;
          width: 0.75em;
        }
      }
      &.walk {
        .icon {
          height: 0.7em;
          width: 0.7em;
        }
      }
      &.car {
        .icon {
          height: 0.67em;
          width: 0.67em;
        }
      }
      &.bicycle {
        margin-bottom: 1px;
        .icon {
          height: 0.67em;
          width: 0.67em;
          margin-bottom: 1px;
          color: #333333;
        }
      }
      .icon-badge {
        left: 0;
        top: -0.75em;
      }
    }
  }

  .action-arrow-click-area {
    padding: 0.25em 0.3em 0.25em 0.3em;
    display: flex;
  }
  .action-arrow {
    display: flex;
    align-items: center;
    padding: $padding-xxsmall $padding-xxsmall 0px $padding-xxsmall;
    line-height: 1;

    svg {
      color: $action-color;
      transition: transform 300ms;
      transform-origin: 50% 50%;
    }
  }

  .itinerary-tab {
    width: auto;
    margin-left: 34px;
    margin-right: 10px;
    border-top: solid 1px $light-gray;
  }

  &.bp-large {
    min-height: 100px;
    border-left-width: 8px;
    padding: 0 0 0 3.75em;
    .summary-clickable-area {
      max-width: calc(100% - 70px);
    }

    .itinerary-duration-and-distance {
      display: flex;
      flex-direction: column;
      justify-content: center;
      margin-left: 1em;
      width: 75px;
    }

    h3, h4 {
      margin-top: 10px;
    }

    .itinerary-duration-container {
      min-width: 50px;

      .itinerary-start-date {
        @include font-narrow-book;
        font-size: $font-size-xxsmall;
        float: left;
        & > span {
          border-radius: $border-radius-small;
        }

        &.nobg {
          height: 1.2rem;
        }
      }
    }

    .itinerary-legs {
      padding-top: 0;
      margin-top: 7px;

      .vehicle-number {
        font-size: $font-size-small;
      }
    }
    .action-arrow-click-area {
      padding: 0 25px 0 20px;
    }
    .action-arrow {
      font-size: 20px;
      border: 0;
    }
    &.open {
      flex-wrap: wrap;
      .action-arrow span > svg {
        transform: rotate(-90deg);
      }
      min-height: 75px;
    }
  }

  .call {
    //text color
    color: $black;
  }
  .summary-clickable-area {
    border-bottom: 1px solid #888;
    padding-bottom: 13px;
    display: flex;
    flex: auto;
    flex-wrap: wrap;
    outline: none;
    transition: border 0.4s ease;
  }
  .summary-clickable-area:hover {
    border-bottom: 1px solid #666;
  }
  .itinerary-summary-visible {
    flex: auto;
    flex-direction: column;
    max-width: 100%;
  }

  .itinerary-summary-header {
      display: flex;
      flex: auto;
  }
}

.additional-canceled-itineraries {
  border-bottom: 1px solid $light-gray;
  border-top: 1px solid $light-gray;
  cursor: pointer;
  font-size: $font-size-xsmall;
  padding: 1em;

  .canceled-itineraries-button {
    color: $primary-color;
  }

  .canceled-itineraries-container {
    align-items: center;
    display: flex;
    justify-content: space-between;

    &.centered {
      justify-content: center;
    }

    .canceled-itineraries-icon-container {
      color: $primary-color;
      margin-right: 1em;

      .icon {
        font-size: 1.4em;
      }
    }
  }
}

.mobile .itinerary-legs {
  padding-top: 7px;
}

.mobile {
  .subicon-caution {
    left: -0.3em;
    top: 0.5em;
  }
  .summary-clickable-area {
    border-bottom: 1px solid #ddd !important;
  }
}

@media print {
  .itinerary-summary-row.bp-large.open {
    height: auto;
    display: block;
  }
}

